[gd_scene load_steps=12 format=3 uid="uid://c4n3x17743rei"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_dbmt3"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_f20dw"]
[ext_resource type="Script" uid="uid://ks7qib2iriim" path="res://src/windows/sfx_editor/audio_clip_editor_window.gd" id="2_xgf3c"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_denbt"]
[ext_resource type="Script" uid="uid://dk01nqct0h45o" path="res://src/windows/extras/waveform.gd" id="5_oa4cw"]
[ext_resource type="Script" uid="uid://cu522q4p3y2cc" path="res://src/windows/sfx_editor/audio_clip_drag_marker.gd" id="5_prwse"]
[ext_resource type="Texture2D" uid="uid://banqkcj06qkj7" path="res://assets/icons/player-stop.svg" id="6_prwse"]
[ext_resource type="Texture2D" uid="uid://c8h1cdfugwtk7" path="res://assets/icons/player-play.svg" id="7_3yom7"]
[ext_resource type="Texture2D" uid="uid://d3itoskalwyi8" path="res://assets/icons/player-record.svg" id="9_3yom7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa4cw"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_detail = 5

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_3yom7"]

[node name="AudioClipEditorWindow" instance=ExtResource("1_dbmt3")]
offset_right = 1161.0
offset_bottom = 764.0
theme = ExtResource("2_f20dw")
script = ExtResource("2_xgf3c")
resizable = false
exclusive = true
show_maximize_button = false
show_close_button = false
minimize_style = "fade_out"
panel_corner_radius = 0
panel_style_override = ExtResource("4_denbt")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer" index="1"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="StartMarker" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/Control" index="0"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 0
text = "S"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_prwse")

[node name="ColorRect" type="ColorRect" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/Control/StartMarker" index="0"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.21611851, 0.4915222, 0.34274763, 1)

[node name="EndMarker" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/Control" index="1"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 0
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_prwse")

[node name="ColorRect" type="ColorRect" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/Control/EndMarker" index="0"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1201851, 0.30128837, 0.20325923, 1)

[node name="Waveform" type="Panel" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_oa4cw")
script = ExtResource("5_oa4cw")

[node name="VBoxContainer2" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer" index="3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="AmpDownButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Amplitude Down"

[node name="AmpUpButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Amplitude Up"

[node name="ReverseButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 10
text = "Reverse"

[node name="StopButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("6_prwse")

[node name="PlayButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("7_3yom7")

[node name="RecordButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("9_3yom7")

[node name="LengthLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 1.52
vertical_alignment = 2

[node name="BrowseFilesystemButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="7"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_horizontal = 10
text = "Browse FileSystem"

[node name="HBoxContainer3" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer" index="4"]
layout_mode = 2

[node name="DeviceOption" type="OptionButton" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 1
fit_to_longest_item = false
allow_reselect = true

[node name="BrowseExistingButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_horizontal = 10
text = "Browse Exisiting"

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="CancelButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ResetButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="SaveButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="FileDialog" type="FileDialog" parent="." index="2"]
unique_name_in_owner = true
title = "Select a Sound Effect File"
initial_position = 2
size = Vector2i(1200, 800)
min_size = Vector2i(1200, 800)
ok_button_text = "Select"
mode_overrides_title = false
file_mode = 0
display_mode = 1
access = 2
filters = PackedStringArray("*.wav")

[node name="Timer" type="Timer" parent="." index="3"]
unique_name_in_owner = true
wait_time = 0.1

[node name="RecordTimer" type="Timer" parent="." index="4"]
unique_name_in_owner = true
wait_time = 0.5

[node name="AudioStreamRecorder" type="AudioStreamPlayer" parent="." index="5"]
unique_name_in_owner = true
stream = SubResource("AudioStreamMicrophone_3yom7")
bus = &"Record"

[connection signal="moved" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/Control/StartMarker" to="." method="_on_start_marker_moved"]
[connection signal="moved" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/Control/EndMarker" to="." method="_on_end_marker_moved"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/AmpDownButton" to="." method="_on_amp_down_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/AmpUpButton" to="." method="_on_amp_up_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/ReverseButton" to="." method="_on_reverse_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/RecordButton" to="." method="_on_record_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/BrowseFilesystemButton" to="." method="_on_browse_filesystem_button_pressed"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/DeviceOption" to="." method="_on_device_option_item_selected"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/BrowseExistingButton" to="." method="_on_browse_existing_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RecordTimer" to="." method="_on_record_timer_timeout"]
